--- a/client/web/ajaxplorer/client/html/gui.html
+++ b/client/web/ajaxplorer/client/html/gui.html
@@ -44,7 +44,7 @@ if($JS_DEBUG){
 </script>
 <?php } ?>
 
-<div id="loading_overlay" style="background-color:#b1cae8;">
+<!--<div id="loading_overlay" style="background-color:#b1cae8;">
 	<div id="progressBox" style="background-color:#b1cae8;">
 		<div id="loaderContent" style="text-align:left; width:416px; height: 321px; background-image:url('<?php print(CLIENT_RESOURCES_FOLDER);?>/images/SplashGradBG.png');background-repeat:no-repeat; padding:0px;">
 		<div style="padding:5px;">
@@ -58,7 +58,7 @@ if($JS_DEBUG){
 			</div>
 		</div>
 	</div>
-</div>
+</div>-->
 <script type="text/javascript">
 		var ajxpResourcesFolder = '<?php print(CLIENT_RESOURCES_FOLDER); ?>';
 		var ajxpServerAccessPath = '<?php print(SERVER_ACCESS); ?>';
