Bugfix : #898 IE11 support for JsFramework

--- a/client/web/web/examples/Example_desktop_html5_keyboard_mode.html
+++ b/client/web/web/examples/Example_desktop_html5_keyboard_mode.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Test</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<script type="text/javascript" src="jquery.js" charset="utf-8"></script>
 		<script type="text/javascript" src="uovd.js" charset="utf-8"></script>
 	</head>
